Ajustes finais, coisas poucas que revisei.

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -27,7 +27,7 @@
       <p>Horário de atendimento: 07h às 22h</p>
       <div class="contact__banner">
         <strong>Whatsapp Proença</strong>
-        <span>Atendimento imediato no número (17) 99616-3040</span>
+        <span>Atendimento imediato no número:<br>(17) 99616-3040</span>
       </div>
     </aside>
   </div>
